--- a/source/dialogs/crossplot-format/crossplot-format-modal.html
+++ b/source/dialogs/crossplot-format/crossplot-format-modal.html
@@ -5,11 +5,11 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
                 <h4 class="modal-title">Crossplot Format</h4>
             </div>
-            <div class="modal-body padding-0 text-11px">
+            <div class="modal-body padding-0">
                 <wi-tabset>
                     <wi-tab heading="Scales">
                         <div class="container-fluid">
-                            <form class="form-horizontal form-condensed">
+                            <form class="form-horizontal form-condensed dialog-style">
                                 <p></p>
                                 <div class="row">
                                     <div class="col-sm-1 border-right">
@@ -36,10 +36,11 @@
                                                         ng-selected="wiModal.selectedCurveY==item.id"></select>
                                             </div>
                                             <div class="padding-tb-small">
-                                                <select ng-model="wiModal.pointSet.idCurveZ"
-                                                        ng-change="wiModal.changeCurveZ()"
+                                                <select ng-model="wiModal.selectedCurveZ"
                                                         class="form-control wi-form-control padding-tb-small"
-                                                        ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"></select>
+                                                        ng-options="item.id as item.datasetCurve for item in wiModal.curvesOnDataset"
+                                                        ng-change="wiModal.onselectedCurveZChange()"
+                                                        ng-selected="wiModal.selectedCurveZ==item.id"></select>
                                             </div>
                                     </div>
 
@@ -201,7 +202,7 @@
                                         <!-- <div class="form-group"> -->
                                             <label class="control-label col-sm-4">Top (m)</label>
                                             <div class="col-sm-8">
-                                                <input type="number" class="form-control wi-form-control"
+                                                <input type="number" step="0.0001" class="form-control wi-form-control"
                                                 ng-model="wiModal.pointSet.intervalDepthTop" 
                                                 ng-disabled="!(wiModal.depthType=='intervalDepth')">
                                             </div>
@@ -211,7 +212,7 @@
                                         <!-- <div class="form-group"> -->
                                             <label class="control-label col-sm-4">Bottom (m)</label>
                                             <div class="col-sm-8">
-                                                <input type="number" class="form-control wi-form-control"
+                                                <input type="number" step="0.0001" class="form-control wi-form-control"
                                                 ng-model="wiModal.pointSet.intervalDepthBottom"
                                                 ng-disabled="!(wiModal.depthType=='intervalDepth')">
                                             </div>
