add reference_curves to histogram, fix zoneMng

--- a/source/dialogs/zone-manager/zone-manager-modal.html
+++ b/source/dialogs/zone-manager/zone-manager-modal.html
@@ -175,10 +175,10 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default" ng-disabled="wiModal.IsNotValid();">
+                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default">
                             <span class="apply-16x16"></span>&nbsp;Apply
                         </button>
-                <button type="button" ng-click="wiModal.onOKButtonClicked();" class="btn btn-default" ng-disabled="wiModal.IsNotValid();">
+                <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default">
                             <span class="ok-16x16"></span>&nbsp;Ok
                         </button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked();" class="btn btn-default">
