--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -236,14 +236,22 @@
                                                     <input ng-model="curve.lineOptions"
                                                             type="button" value="Edit..." id="editLine" 
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve();">
+                                                            ng-click="wiModal.lineStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
+                                                            ng-disabled="curve.displayMode == 'Symbol' || curve.displayMode == 'None'">
                                                 </td>
                                                 <td>
                                                     <input ng-model="curve.symbolOptions"
                                                             type="button" value="Edit..." id="editSymbol" 
                                                             class="form-control wi-form-control"
-                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve();">
+                                                            ng-click="wiModal.symbolStyleButtonClicked($index, $event); wiModal.onChangeCurve();"
+                                                            ng-disabled="curve.displayMode == 'Line' || curve.displayMode == 'None'">
                                                 </td>
+                                                <!-- <td>
+                                                    <input ng-model="lineSymbolOptions"
+                                                            type="button" value="Edit..." id="editSymbol" 
+                                                            class="form-control wi-form-control"
+                                                            ng-click="wiModal.curveStyleButtonClicked($index, $event); wiModal.onChangeCurve();">
+                                                </td> -->
                                                 <td>
                                                     <select ng-model="curve.displayAs" name="displayAs"
                                                             value="" class="form-control wi-form-control"
