--- a/source/dialogs/symbol-style/symbol-style-modal.html
+++ b/source/dialogs/symbol-style/symbol-style-modal.html
@@ -5,149 +5,53 @@
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked()" aria-hidden="true">&times;</button>
                 <h4>Attribute</h4>
             </div>
-            <div class="modal-body">
+            <div class="modal-body small-text">
                 <wi-tabset>
-                    <wi-tab heading="Lines">
+                    <wi-tab heading="Symbol">
                         <div class="container-fluid">
                             <form action="" class="form-horizontal">
+                                <br>
+                                <div class="row">
+                                    <div class="col-sm-8">
+                                        <div class="form-group">
+                                            <label class="control-label col-sm-4">Symbol Type</label>
+                                            <div class="col-sm-8">
+                                                <select ng-model="wiModal.options.symbolStyle.symbolName"
+                                                        class="form-control wi-form-control"
+                                                        ng-options="item for item in wiModal.symbolType">
+                                                </select>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="col-sm-4">
+                                        <div class="form-group">
+                                            <label class="control-label col-sm-6 padding-right-0">Symbol Size</label>
+                                            <div class="col-sm-6">
+                                                <input type="number" id="symbol-size"
+                                                    min="1" max="30"
+                                                    class="form-control wi-form-control"
+                                                    ng-model="wiModal.options.symbolStyle.symbolSize">
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <hr>
                                 <div class="row">
                                     <div class="col-sm-12">
                                         <div class="form-group">
-                                            <label class="control-label col-sm-4 normal-text" for="style">Line Width</label>
-                                            <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.options.symbolStyle.symbolLineWidth">
-                                                    <ui-select-match>
-                                                        <div class="col-sm-2 text-left">{{$select.selected}}</div>
-                                                        <svg height="10" width="100%" class="col-sm-10">
-                                                            <line x1="0" y1="5" x2="100%" y2="5"
-                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: {{$select.selected}}"></line>
-                                                        </svg>
-                                                    </ui-select-match>
-                                                    <ui-select-choices repeat="width in wiModal.widthes">
-                                                        <div class="col-sm-2 text-left">{{width}}</div>
-                                                        <svg height="10" width="100%" class="col-sm-10">
-                                                            <line x1="0" y1="5" x2="100%" y2="5"
-                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: {{width}}"></line>
-                                                        </svg>
-                                                    </ui-select-choices>
-                                                </ui-select>
+                                            <label class="control-label col-sm-2">Fill Color</label>
+                                            <div class="col-sm-9">
+                                                <div class="valign-middle pull-left" style="height: 23px; width: 90%; border: 1px solid #000;" ng-style="{'background-color':wiModal.options.symbolStyle.symbolFillStyle}"></div>
+                                                <button ng-click="wiModal.fillColor();" class="wi-form-control">...</button>
                                             </div>
                                         </div>
                                     </div>
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-4 normal-text" for="style">Line Style</label>
-                                            <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.options.symbolStyle.symbolLineDash">
-                                                    <ui-select-match>
-                                                        <svg height="10" width="100%" class="col-sm-12">
-                                                            <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{$select.selected.join(',')}}"
-                                                                  style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: 1}"></line>
-                                                        </svg>
-                                                    </ui-select-match>
-                                                    <ui-select-choices repeat="style in wiModal.styles" class="text-left">
-                                                        <div class="container-fluid">
-                                                            <!--<div class="col-sm-2 text-left"></div>-->
-                                                            <svg height="10" width="100%" class="col-sm-12">
-                                                                <line x1="0" y1="5" x2="100%" y2="5" stroke-dasharray="{{style.join(',')}}"
-                                                                      style="stroke: {{wiModal.options.symbolStyle.symbolStrokeStyle}}; stroke-width: 1"></line>
-                                                            </svg>
-                                                        </div>
-
-                                                    </ui-select-choices>
-                                                </ui-select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-4 normal-text" for="color">Line Color</label>
-                                            <div class="col-sm-8 text-left">
-                                                <button ng-click="wiModal.lineColor();" 
-                                                        ng-style="{'background-color':wiModal.options.symbolStyle.symbolStrokeStyle}"
-                                                        class="form-control wi-form-control width-80px">Change</button>
-                                            </div>
-                                        </div>
-                                    </div>
+                                    <hr>
                                 </div>
+                                <hr>
                             </form>
                         </div>
                     </wi-tab>
-                    <wi-tab heading="Solid fill">
-                        <div class="container-fluid">
-                            <form action="" class="form-horizontal">
-                                <div class="col-sm-12">
-                                    <div class="form-group">
-                                        <label class="control-label col-sm-4 normal-text" for="color">Solid fill color</label>
-                                        <div class="col-sm-8 text-left">
-                                            <button ng-click="wiModal.solidFillColor();"
-                                                    ng-style="{'background-color':wiModal.options.symbolStyle.symbolFillStyle}"
-                                                    class="form-control wi-form-control width-80px">Change</button>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </wi-tab>
-<!--                     <wi-tab heading="Pattern">
-                        <div class="container-fluid">
-                            <form action="" class="form-horizontal">
-                                <div class="row">
-                                    <div class="col-sm-12">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-4">Pattern</label>
-                                            <div class="col-sm-8">
-                                                <ui-select theme="bootstrap" ng-model="wiModal.options.patternFill.pattern">
-                                                    <ui-select-match>
-                                                        <wi-canvas-rect name="_selectedPatternFill" 
-                                                                        pattern="{{wiModal.options.patternFill.pattern}}" 
-                                                                        width="270" height="20" 
-                                                                        foreground="{{wiModal.options.patternFill.foreground}}" 
-                                                                        background='{{wiModal.options.patternFill.background}}'>
-                                                        </wi-canvas-rect>
-                                                    </ui-select-match>
-                                                    <ui-select-choices repeat="selectedPattern in wiModal.selectPatterns">
-                                                        <wi-canvas-rect name="{{selectedPattern}}" pattern="{{selectedPattern}}" 
-                                                                        width="270" height="20" 
-                                                                        foreground="{{wiModal.options.patternFill.foreground}}" 
-                                                                        background='{{wiModal.options.patternFill.background}}'>
-                                                        </wi-canvas-rect>
-                                                    </ui-select-choices>
-                                                </ui-select>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-6 small-text">Foreground</label>
-                                            <div class="col-sm-6 text-left">
-                                                <input kendo-color-picker k-palette="'websafe'"
-                                                       class="form-control wi-form-control"
-                                                       ng-model="wiModal.options.patternFill.foreground"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="col-sm-6">
-                                        <div class="form-group">
-                                            <label class="control-label col-sm-6 small-text">Background</label>
-                                            <div class="col-sm-6 text-left">
-                                                <input kendo-color-picker k-palette="'websafe'"
-                                                       class="form-control wi-form-control"
-                                                       ng-model="wiModal.options.patternFill.background"/>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </form>
-                        </div>
-                    </wi-tab>
-                    <wi-tab heading="Custom fill">
-                        <div class="container-fluid">
-                            <form action="" class="form-horizontal">
-
-                            </form>
-                        </div>
-                    </wi-tab> -->
                 </wi-tabset>
             </div>
             <div class="modal-footer">
