add wi-decimal-places.js and fix range-specific dialog

--- a/source/dialogs/authentication/authentication-modal.html
+++ b/source/dialogs/authentication/authentication-modal.html
@@ -24,9 +24,8 @@
                                 </div>
                                 <hr>
                                 <button type="submit" class="btn btn-default float-right margin-bottom-1_5em" ng-click="wiModal.onLoginButtonClicked()">Login</button>
-                                <div class="form-group col-sm-4 pull-right">
-                                    <input type="checkbox" id="remember" ng-model="wiModal.remember">
-                                    <label class="control-label" for="remember">Remember me</label>
+                                <div class="form-group checkbox col-sm-4 pull-right">
+                                    <label class="control-label" for="remember"><input type="checkbox" id="remember" ng-model="wiModal.remember"> Remember me</label>
                                 </div>
                             </form>
                         </div>
