--- a/source/dialogs/range-specific/range-specific-modal.html
+++ b/source/dialogs/range-specific/range-specific-modal.html
@@ -14,23 +14,24 @@
                         <label class="control-label col-sm-3" for="from">From: </label>
                         <div class="col-sm-9">
                             <input type="number" class="form-control" step="0.0001"
-                                   ng-model="wiModal.depthRange[0]"
-                                   required>
+                                   name='topDepth' ng-model="wiModal.depthRange[0]"
+                                   wi-decimal-places required>
                         </div>
                     </div>
                     <div class="form-group">
                         <label class="control-label col-sm-3" for="to">To:</label>
                         <div class="col-sm-9">
                             <input type="number" class="form-control" step="0.0001"
+                                   name="bottomDepth"
                                    ng-model="wiModal.depthRange[1]"
                                    wi-enter="wiModal.onOkButtonClicked()"
-                                   required>
+                                   wi-decimal-places required>
                         </div>
                     </div>
                 </form>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onOkButtonClicked()" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
+                <button type="button" ng-click="wiModal.onOkButtonClicked()" ng-disabled="modalRangeSpecific.topDepth.$invalid || modalRangeSpecific.bottomDepth.$invalid" class="btn btn-default"><span class="ok-16x16"></span>&nbsp;OK</button>
                 <button type="button" ng-click="wiModal.onCancelButtonClicked()" class="btn btn-default"><span class="close-16x16"></span>&nbsp;Cancel</button>
             </div>
         </div>
