--- a/source/dialogs/log-track-properties/log-track-properties-modal.html
+++ b/source/dialogs/log-track-properties/log-track-properties-modal.html
@@ -3,7 +3,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <button type="button" class="close" ng-click="wiModal.onCancelButtonClicked();" aria-hidden="true">&times;</button>
-                <h4 class="modal-title">Track Properties</h4>
+                <h4 class="modal-title">Track Properties - {{wiModal.props.general.title}}</h4>
             </div>
             <div class="modal-body padding-0">
                 <wi-tabset>
