--- a/source/dialogs/zone-manager/zone-manager-modal.html
+++ b/source/dialogs/zone-manager/zone-manager-modal.html
@@ -175,7 +175,7 @@
                 </div>
             </div>
             <div class="modal-footer">
-                <button type="button" ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default">
+                <button type="button" ng-disabled='wiModal.applyingInProgress' ng-click="wiModal.onApplyButtonClicked();" class="btn btn-default">
                             <span class="apply-16x16"></span>&nbsp;Apply
                         </button>
                 <button type="button" ng-click="wiModal.onOkButtonClicked();" class="btn btn-default">
