--- a/source/html/index.html
+++ b/source/html/index.html
@@ -48,6 +48,7 @@
     <link rel="stylesheet" href="css/wi-zone.css">
     <link rel="stylesheet" href="css/wi-container.css">
     <link rel="stylesheet" href="css/wi-user.css">
+    <link rel="stylesheet" href="css/wi-spinner.css">
 
     <link href='css/graph.css' rel='stylesheet'>
     <link href='css/main.css' rel='stylesheet'>
@@ -71,6 +72,7 @@
     <script src='vendor/js/ResizeSensor.js'></script>
     <script src="vendor/js/angular-resizable.min.js"></script>
     <script src="vendor/js/simple-statistics.min.js"></script>
+    <script src="vendor/js/spin.min.js"></script>
     <!-- color picker -->
     <script src="vendor/js/kendo.all.min.js"></script>
     <script type="text/javascript" src="vendor/js/bootstrap-colorpicker.min.js"></script>
@@ -105,6 +107,7 @@
         </div>
         <wi-user class="user-wrapper" name='user'></wi-user>
         <wi-context-menu name="ContextMenu"></wi-context-menu>
+        <wi-spinner name="SPINNER"></wi-spinner>
     </div>
 
     <template id='explorer-block'>
